--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,9 @@
-DB_HOST=db.heydillfwyewjofkfpdy.supabase.co
-DB_PORT=5432
-DB_NAME=postgres
-DB_USER=postgres
-DB_PASSWORD=HantiDatabse2025
-DB_SSL=true
+# NEXT_PUBLIC_DB_HOST=db.heydillfwyewjofkfpdy.supabase.co
+# NEXT_PUBLIC_DB_PORT=5432
+# NEXT_PUBLIC_DB_NAME=postgres
+# NEXT_PUBLIC_DB_USER=postgres
+# NEXT_PUBLIC_DB_PASSWORD=HantiDatabse2025
+# NEXT_PUBLIC_DB_SSL=true
+
+REACT_APP_SUPABASE_URL=https://heydillfwyewjofkfpdy.supabase.co
+REACT_APP_SUPABASE_PUBLISHABLE_DEFAULT_KEY=sb_publishable_ebth8OuEwBLpLkQuzcBczg_EQfIGP2C
