--- a/package.json
+++ b/package.json
@@ -9,21 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.7.0",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
     "next": "14.0.0",
+    "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
-    "pg": "^8.11.3",
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^16.3.1"
+    "supabase": "^2.45.5"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/pg": "^8.10.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/pg": "^8.10.7",
-    "@types/bcryptjs": "^2.4.6",
     "eslint": "^8",
-    "eslint-config-next": "14.0.0"
+    "eslint-config-next": "14.0.0",
+    "typescript": "^5"
   }
 }
